--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
-tauri = { version = "1.5.1", features = [ "window-show", "protocol-asset", "dialog-message", "shell-execute", "fs-read-file", "process-relaunch", "window-close", "fs-remove-dir", "window-unmaximize", "window-print", "shell-open", "fs-read-dir", "path-all", "dialog-open", "dialog-save", "notification-all", "process-exit", "window-minimize", "window-maximize", "fs-exists", "fs-remove-file", "dialog-confirm", "window-start-dragging", "window-unminimize", "fs-copy-file", "fs-rename-file", "fs-create-dir", "dialog-ask", "window-hide", "fs-write-file"] }
+tauri = { version = "1.5.1", features = [ "window-show", "protocol-asset", "dialog-message", "shell-execute", "fs-read-file", "window-close", "fs-remove-dir", "window-unmaximize", "window-print", "shell-open", "fs-read-dir", "path-all", "dialog-open", "dialog-save", "notification-all", "process-exit", "window-minimize", "window-maximize", "fs-exists", "fs-remove-file", "dialog-confirm", "window-start-dragging", "window-unminimize", "fs-copy-file", "fs-rename-file", "fs-create-dir", "dialog-ask", "window-hide", "fs-write-file"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
