--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -39,7 +39,7 @@ chrono = { version = "0.4", features = ["serde"] }
 regex = "1.0"
 
 # Rust backend library
-audit-backend = { path = "../../rust-backend" }
+flux-backend = { path = "../../rust-backend" }
 
 
 [features]
